--- a/savePlace/views/savePlace.jade
+++ b/savePlace/views/savePlace.jade
@@ -27,8 +27,8 @@ html
         br
       h4 foto
         input#foto(type='file', name='ufoto')
-        input#latitud( type='text', size='40', name='la')
-        input#longuitud( type='text', size='40', name='lo')
+        input#latitud( type='hidden', size='40', name='la')
+        input#longuitud( type='hidden', size='40', name='lo')
         
       input#submit(type='submit', value='Submit')
 
