Busqueda de lugares

--- a/savePlace/views/savePlace.jade
+++ b/savePlace/views/savePlace.jade
@@ -25,7 +25,7 @@ html
         br
       #map-canvas(style='width:60%; height:60%')
         br
-      h4 foto
+      h4 Imagen del Lugar
         input#foto(type='file', name='ufoto')
         input#latitud( type='hidden', size='40', name='la')
         input#longuitud( type='hidden', size='40', name='lo')
