--- a/public/stylesheets/registro.css
+++ b/public/stylesheets/registro.css
@@ -25,7 +25,33 @@
       -moz-box-shadow: 0px 4px 0px #a74d46;
       box-shadow: 0px 4px 0px #a74d46;
       background: #e78129;
-    }             
+    }
+  #submit{
+        border: 0;
+        background: #239EEB;
+        -webkit-box-shadow: 0;
+        -moz-box-shadow: 0;
+        box-shadow: 0;
+        font-size: 0.75em;
+        color: rgba(255, 255, 255, 0.8);
+        text-transform: uppercase;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        -webkit-box-shadow: 0px 4px 0px #a74d46;
+        -moz-box-shadow: 0px 4px 0px #a74d46;
+        box-shadow: 0px 4px 0px #a74d46;
+      }
+    #submit :hover {
+        background: #;
+        color: white;
+      }
+      #submit :active {
+        -webkit-box-shadow: 0px 4px 0px #a74d46;
+        -moz-box-shadow: 0px 4px 0px #a74d46;
+        box-shadow: 0px 4px 0px #a74d46;
+        background: #e78129;
+      }
+
     #googleMap{
       width:100%;
       height:480px;
@@ -35,39 +61,39 @@
       display:block;
       width: 900px;0px;
       margin:0 auto;
-       
+
     }
 
-    .wrapper { 
-    width: 850px; 
-    overflow: hidden; 
-    margin: 0 auto; 
-    background: none; 
+    .wrapper {
+    width: 850px;
+    overflow: hidden;
+    margin: 0 auto;
+    background: none;
 }
 
-header { 
-    height: 100px; 
-    background-color: #589FC6 ; 
+header {
+    height: 100px;
+    background-color: #589FC6 ;
 }
 
-header #usernav { 
-    float: right; 
-    line-height: 100px; 
-    font-size: 14px; 
-    font-weight: bold; 
-    color: #555; 
+header #usernav {
+    float: right;
+    line-height: 100px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #555;
 }
 
-header #usernav a { 
-    color: #444; 
-    text-shadow: 0px 1px 1px #ddd; 
+header #usernav a {
+    color: #444;
+    text-shadow: 0px 1px 1px #ddd;
 }
 
-header #usernav a span img { 
-    position: relative; 
-    top: 8px; 
-    background: #cecece ; 
-    margin-left: 5px; 
-    padding: 3px; 
-    border: 1px solid #969696 ; 
+header #usernav a span img {
+    position: relative;
+    top: 8px;
+    background: #cecece ;
+    margin-left: 5px;
+    padding: 3px;
+    border: 1px solid #969696 ;
 }
