--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -8,7 +8,69 @@
   <link rel="stylesheet" href="stylesheets/font-awesome-4.3.0/css/font-awesome.min.css"/>
   <script src="stylesheets/foundation/js/vendor/modernizr.js"></script>
   <script src="http://maps.googleapis.com/maps/api/js"></script>
-  <script src="javascripts/hola.js"></script>
+  <script>
+  function initialize() {
+    var mapOptions = {
+      zoom: 18
+    };
+    var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
+
+    if(navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        var pos = new google.maps.LatLng(position.coords.latitude,
+                                         position.coords.longitude);
+
+        var marker = new google.maps.Marker({
+             icon:'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
+             position: pos,
+             map: map,
+             draggable:true,
+             animation: google.maps.Animation.DROP
+            /* title:"Hello World!" */});
+        var infowindow = new google.maps.InfoWindow;
+             google.maps.event.addListener(marker, 'mouseover', function() {
+             infowindow.setContent("<p>Marker Location:" + marker.getPosition() + "</p>");
+        var lat = marker.getPosition().lat();
+        var ln = marker.getPosition().lng();
+            document.getElementById("lat").value=lat;
+            document.getElementById("lon").value=ln;
+           infowindow.open(map, marker);
+                                     });
+    map.setCenter(pos);},
+    function() {
+    handleNoGeolocation(true);
+    });
+    } else {
+    //Browser doesn't support Geolocation
+   handleNoGeolocation(false);
+  }
+}
+function toggleBounce() {
+   infowindow.open(map, marker);
+  /* if (marker.getAnimation() != null) {
+ /      /marker.setAnimation(null);
+        marker.setTitle="Hola";
+   } else {
+    // marker.setAnimation(google.maps.Animation.BOUNCE);
+    } */
+    }
+function handleNoGeolocation(errorFlag) {
+  if (errorFlag) {
+   var content = 'Error: The Geolocation service failed.';
+  } else {
+    var content = 'Error: Your browser doesn\'t support geolocation.';
+  }
+
+  var options = {
+       map: map,
+       position: new google.maps.LatLng(60, 105),
+      content: content
+ };
+  var infowindow = new google.maps.InfoWindow(options);
+       map.setCenter(options.position);
+       }
+google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
 
 </head>
 <body>
@@ -30,32 +92,33 @@
       <h1>Registra tu lugar</h1>
       <br></br>
     </div>
+
     <div class="register">
-      <form>
+      <form action="/savePlace" method="post" enctype="multipart/form-data" name="place">
        <div class="large-10 columns">
-        <input type="text" placeholder="Calle">
+        <input type="text" placeholder="Calle" id="calle" name="calle">
         <br>
       </div>
       <div class="large-2 columns">
-        <input type="text" placeholder="Número">
+        <input type="text" placeholder="Número" id="numero" name="numero">
 
       </div>
       <div class="large-6 columns">
-        <input type="text" placeholder="Colonia">
+        <input type="text" placeholder="Colonia" id="colonia" name="colonia">
       </div>
       <div class="large-4 columns">
-        <input type="text" placeholder="Delegación">
+        <input type="text" placeholder="Delegación" id="delegacion" name="delegacion">
       </div>
       <div class="large-2 columns">
-        <input type="text" placeholder="CP">
+        <input type="text" placeholder="CP" id="cp" name="cp">
         <br>
       </div>
       <div class="large-12 columns">
         <label>Tipo de lugar
-          <select>
-            <option value="car">Auto sedan</option>
-            <option value="truck">Auto compacto</option>
-            <option value="van">Camioneta</option>
+          <select id= "lugar" name="lugar">
+            <option value=1>Auto sedan</option>
+            <option value=2>Auto compacto</option>
+            <option value=3>Camioneta</option>
           </select>
           <br>
         </label>
@@ -67,37 +130,55 @@
       <div class="large-6 columns">
         <h4>Entrada</h4>
         <div class= "large-6 columns">
-          <input type="date"/>
+          <select id= "dateE" name="dateE">
+            <option value="Lunes">Lunes</option>
+            <option value="Martes">Martes</option>
+            <option value="Miercoles">Miercoles</option>
+            <option value="Jueves">Jueves</option>
+            <option value="Viernes">Viernes</option>
+            <option value="Sabado">Sabado</option>
+            <option value="Domingo">Domingo</option>
+          </select>
         </div>
         <div class= "large-6 columns">
-          <input type="time"/>
+          <input type="time" id="timeE" name="timeE"/>
         </div>
       </div>
       <div class="large-6 columns">
         <h4>Salida</h4>
         <div class= "large-6 columns">
-          <input type="date"/>
+          <select id= "dateS" name="dateS">
+            <option value="Lunes">Lunes</option>
+            <option value="Martes">Martes</option>
+            <option value="Miercoles">Miercoles</option>
+            <option value="Jueves">Jueves</option>
+            <option value="Viernes">Viernes</option>
+            <option value="Sabado">Sabado</option>
+            <option value="Domingo">Domingo</option>
+          </select>
         </div>
         <div class= "large-6 columns">
-          <input type="time"/>
+          <input type="time"  id="timeS" name="timeS"/>
+
         </div>
+        <input type="hidden"  id="lat" name="lat" />
+        <input type="hidden"  id="lon" name="lon" />
       </div>
 
 
     </div>
 
     <div class="large-12 columns">
-      <a href="#" class="button">Enviar</a>
+      <input id="submit" type="submit" value="Submit">
     </div>
   </form>
 </div>
 </div>
-
 <div class="map">
   <div class= "large-12 columns">
     <h2>Ponga en el mapa la ubicación</h2>
     <div class = "large-12 columns">
-      <div id="map-canvas"></div>
+      <div id="googleMap"></div>
     </div>
   </div>
 </div>
