--- a/views/busqueda.ejs
+++ b/views/busqueda.ejs
@@ -10,7 +10,7 @@
 		<script src="javascripts/socket.io.js"></script>
 		<script>
 		var points;
-		var socket = io.connect('http://localhost:3000/search');
+		var socket = io.connect('http://localhost:3000/');
   socket.on('news', function (data) {
     points=data;
 		console.log(data);
