--- a/views/busqueda.ejs
+++ b/views/busqueda.ejs
@@ -1,4 +1,4 @@
-<html lang="en" ng-app >
+<html lang="en" ng-app="searchPlace" >
 	<head>
 		<meta charset = "UTF-8">
 	  <link rel="stylesheet" href= "stylesheets/registro.css"/>
@@ -9,100 +9,6 @@
 	  <script src="http://maps.googleapis.com/maps/api/js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.6/angular.min.js"></script>
 
-
-		<script>
-
-
-	  function initialize() {
-	    var mapOptions = {
-	      zoom: 15
-	    };
-	    var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
-
-	    if(navigator.geolocation) {
-	      navigator.geolocation.getCurrentPosition(function(position) {
-	        var pos = new google.maps.LatLng(position.coords.latitude,
-	                                         position.coords.longitude);
-
-
-	        var markerClient = new google.maps.Marker({
-	             icon:'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
-	             position: pos,
-	             map: map,
-	             draggable:true,
-	             animation: google.maps.Animation.DROP
-	            /* title:"Hello World!" */});
-
-							var markerRent = new google.maps.Marker({
-		             icon:'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
-		             position: new google.maps.LatLng(19.433878043215408, -99.2056404253006),
-		             map: map,
-		             draggable:true,
-		             animation: google.maps.Animation.DROP
-		            /* title:"Hello World!" */});
-
-								var markerRent1 = new google.maps.Marker({
-			             icon:'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
-			            position:new google.maps.LatLng(19.430170975081705, -99.1980612026245),
-			             map: map,
-			             draggable:true,
-			             animation: google.maps.Animation.DROP
-			            /* title:"Hello World!" */});
-
-
-									var markerRent2 = new google.maps.Marker({
-				             icon:'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
-				             position:new google.maps.LatLng(19.430346972082653, -99.2025397560974),
-				             map: map,
-				             draggable:true,
-				             animation: google.maps.Animation.DROP
-				            /* title:"Hello World!" */});
-										var infowindow = new google.maps.InfoWindow;
-						             google.maps.event.addListener(markerClient, 'mouseover', function() {
-						             infowindow.setContent("<p>Esta es tu casa</p>");
-						              infowindow.open(map, markerClient);
-						                                     });
-										var infowindow1 = new google.maps.InfoWindow;
-												google.maps.event.addListener(markerRent1, 'mouseover', function() {
-												infowindow.setContent("<p>Este es un lugar donde puedes estacionarte</p>");
-												infowindow.open(map, markerRent1);
-																										});
-
-	    map.setCenter(pos);},
-	    function() {
-	    handleNoGeolocation(true);
-	    });
-	    } else {
-	    //Browser doesn't support Geolocation
-	   handleNoGeolocation(false);
-	  }
-	}
-	function toggleBounce() {
-	   infowindow.open(map, marker);
-	  /* if (marker.getAnimation() != null) {
-	 /      /marker.setAnimation(null);
-	        marker.setTitle="Hola";
-	   } else {
-	    // marker.setAnimation(google.maps.Animation.BOUNCE);
-	    } */
-	    }
-	function handleNoGeolocation(errorFlag) {
-	  if (errorFlag) {
-	   var content = 'Error: The Geolocation service failed.';
-	  } else {
-	    var content = 'Error: Your browser doesn\'t support geolocation.';
-	  }
-
-	  var options = {
-	       map: map,
-	       position: new google.maps.LatLng(60, 105),
-	      content: content
-	 };
-	  var infowindow = new google.maps.InfoWindow(options);
-	       map.setCenter(options.position);
-	       }
-	google.maps.event.addDomListener(window, 'load', initialize);
-	  </script>
 	 <title>Raedam-Busqueda de espacios</title>
 	</head>
 	<body ng-controller="printPlace">
@@ -124,12 +30,6 @@
     </div>
 </div>
 
-<div id="todo-list" class="row">
-            <div class="col-sm-4 col-sm-offset-4">
-                <div class="checkbox" ng-repeat="lugar in lugares">
-                    <label>
-                        <input type="checkbox" > {{ lugar.text }}
-                    </label>
 
 <!--Aqui va el mapa-->
 <div class="map">
@@ -143,4 +43,5 @@
 
 	</body>
 	<script src="javascripts/search.js"></script>
+
 </html>
