--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -6,65 +6,60 @@
 	<title>Payment</title>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="https://conektaapi.s3.amazonaws.com/v0.3.2/js/conekta.js"></script>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	
 </head>
 <body>
-	<div class="container">
-	<div class="col-sm-6 col-sm-offset-3">
-		<form action="" method="POST" id="card-form">
-			<span class="card-errors"></span>
-		  	<div class="form-row">
-		    	<label>
-		      		<span>Nombre del tarjetahabiente</span>
-		      		<input type="text" size="20" class="form-control" data-conekta="card[name]"/>
-		    	</label>
-		  	</div>
-		  	<div class="form-row">
-		    	<label>
-		      		<span>Número de tarjeta de crédito</span>
-		      		<input type="text" size="20" class="form-control" data-conekta="card[number]"/>
-		    	</label>
-		  	</div>
-		  	<div class="form-row">
-			    <label>
-		      		<span>CVC</span>
-		      		<input type="text" size="4" class="form-control" data-conekta="card[cvc]"/>
-		    	</label>
-		  	</div>
-		  	<div class="form-row">
-			    <label>
-		      		<span>Fecha de expiración (MM/AAAA)</span>
-		      		<input type="text" size="2" class="form-control" data-conekta="card[exp_month]"/>
-		    	</label>
-		    	<span>/</span>
-		    	<input type="text" size="4" class="form-control" data-conekta="card[exp_year]"/>
-		    
-		  	</div>
-		  	<div class="form-row">
-		    	<label>
-		    		<span>Descripcion</span>
-		    		<input type="text" class="form-control" name="description" />
-		    	</label>
-		  	</div>
-		  	<div class="form-row">
-		    	<label>
-		    		<span>Monto</span>
-		    		<input type="text" class="form-control" name="amount" />
-		    	</label>
-		  	</div>
-		  	<div class="form-row">
-		    	<label>
-		    		<span>Moneda</span>
-		    		<input type="text" class="form-control" name="currency" size="3"/>
-		    	</label>
-		  	</div>
-		  	<button type="submit" class="btn btn-warning btn-lg">Suscribirse ahora!</button>
-		</form>
-	</div>
-	</div>
+	<form action="" method="POST" id="card-form">
+	  <span class="card-errors"></span>
+	  <div class="form-row">
+	    <label>
+	      <span>Nombre del tarjetahabiente</span>
+	      <input type="text" size="20" data-conekta="card[name]"/>
+	    </label>
+	  </div>
+	  <div class="form-row">
+	    <label>
+	      <span>Número de tarjeta de crédito</span>
+	      <input type="text" size="20" data-conekta="card[number]"/>
+	    </label>
+	  </div>
+	  <div class="form-row">
+	    <label>
+	      <span>CVC</span>
+	      <input type="text" size="4" data-conekta="card[cvc]"/>
+	    </label>
+	  </div>
+	  <div class="form-row">
+	    <label>
+	      <span>Fecha de expiración (MM/AAAA)</span>
+	      <input type="text" size="2" data-conekta="card[exp_month]"/>
+	    </label>
+	    <span>/</span>
+	    <input type="text" size="4" data-conekta="card[exp_year]"/>
+	    
+	  </div>
+	  <div class="form-row">
+	    <label>
+	    	<span>Descripcion</span>
+	    	<input type="text" name="description" />
+	    </label>
+	  </div>
+	  <div class="form-row">
+	    <label>
+	    	<span>Monto</span>
+	    	<input type="text" name="amount" />
+	    </label>
+	  </div>
+	  <div class="form-row">
+	    <label>
+	    	<span>Moneda</span>
+	    	<input type="text" name="currency" size="3"/>
+	    </label>
+	  </div>
+	  
+	  <button type="submit">Suscribirse ahora!</button>
+	</form>
 	<script type="text/javascript">
+ 
 	 // Conekta Public Key
 	  Conekta.setPublishableKey('key_ExT6okhg69VcMmznRRvHo7Q');
 	 
