--- a/public/stylesheets/registro.css
+++ b/public/stylesheets/registro.css
@@ -1,3 +1,6 @@
+* {
+ font-family:sans-serif;
+  }
   .all{
     background-color:#B3E5FC;
   }
@@ -35,11 +38,10 @@
         font-size: 0.75em;
         color: rgba(255, 255, 255, 0.8);
         text-transform: uppercase;
-        padding-top: 25px;
-        padding-bottom: 25px;
-        -webkit-box-shadow: 0px 4px 0px #a74d46;
-        -moz-box-shadow: 0px 4px 0px #a74d46;
-        box-shadow: 0px 4px 0px #a74d46;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 10px 0px 20px 10px;
+       
       }
     #submit :hover {
         background: #;
@@ -58,10 +60,15 @@
 
     }
     #container{
+
       display:block;
       width: 900px;0px;
-      margin:0 auto;
+      margin:2em auto;
 
+    }
+
+    #BarraBusqueda {
+      text-align: center;
     }
 
     .wrapper {
@@ -69,31 +76,24 @@
     overflow: hidden;
     margin: 0 auto;
     background: none;
+
 }
 
-header {
-    height: 100px;
-    background-color: #589FC6 ;
-}
 
-header #usernav {
-    float: right;
-    line-height: 100px;
-    font-size: 14px;
-    font-weight: bold;
-    color: #555;
-}
 
-header #usernav a {
-    color: #444;
-    text-shadow: 0px 1px 1px #ddd;
-}
+.clearfix li{
+  list-style: none;
+  display: inline-block;
+  padding-left: 10%;
+  padding-top: 15%;
 
-header #usernav a span img {
-    position: relative;
-    top: 8px;
-    background: #cecece ;
-    margin-left: 5px;
-    padding: 3px;
-    border: 1px solid #969696 ;
+}
+.logo{
+  height: 100px;
+}
+nav.top-bar {
+background-color:#000;
+}
+nav.topbar a{
+  background-color:#00bcd4;
 }
