--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Node Authentication</title>
+	<title>Raedam - Sign-Up</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<style>
-		body { padding-top:80px; }
-	</style>
+	<link rel="stylesheet" href="/stylesheets/login_style.css">
+
 </head>
-<body>
-<div class="container">
-<div class="col-sm-6 col-sm-offset-3">
+<body id="BODY">
+	<div id="Tabla">
+	
+		<div class="col-sm-8 col-sm-offset-2">
+		<a href="#"><img src="../images/raedam-logo_360.png" class="logo"><br><br></a>
+			<h1><span class="fa fa-sign-in"></span> Signup</h1>
 
-	<h1><span class="fa fa-sign-in"></span> Signup</h1>
+			<% if (message.length > 0) { %>
+				<div class="alert alert-danger"><%= message %></div>
+			<% } %>
 
-	<% if (message.length > 0) { %>
-		<div class="alert alert-danger"><%= message %></div>
-	<% } %>
+			<form action="/signup" method="post">
+				<div class="form-group">
+					<label>Email</label>
+					<input type="text" class="form-control" name="email">
+				</div>
+				<div class="form-group">
+					<label>Password</label>
+					<input type="password" class="form-control" name="password">
+				</div>
 
-	<form action="/signup" method="post">
-		<div class="form-group">
-			<label>Email</label>
-			<input type="text" class="form-control" name="email">
+				<button type="submit" class="btn btn-warning btn-lg">Signup</button>
+			</form>
+
+			<hr>
+
+			<p>¿Ya tienes una cuenta? <a href="/login">Entra</a></p>
+			<p>Regresa al <a href="/">inicio</a>.</p>
+	
 		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" class="form-control" name="password">
-		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
-	</form>
-
-	<hr>
-
-	<p>¿Ya tienes una cuenta? <a href="/login">Entra</a></p>
-	<p>Regresa al <a href="/">inicio</a>.</p>
-</div>
-</div>
+	</div>	
 </body>
 </html>
