--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,15 +29,15 @@
             <p>Raedam conecta personas que necesitan estacionarse con el espacio más cercano para hacerlo.</p>
             <p>Así de simple.</p>
             <div id = "giveAskPlace">
-              <button type="button">Registra tu espacio</button>
-              <button type="button">Busca un espacio</button>
+              <a href="/savePlace"><button type="button">Registra tu espacio</button></a>
+              <a href="/search"><button type="button">Busca un espacio</button></a>
             </div>
           </div>
         </div>
       </section>
     </div>
 
-  </div>
+  e/div>
 
   <div class="parallax-content">
     <center>
