--- a/views/profiles.ejs
+++ b/views/profiles.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Perfil - RAEDAM</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="/stylesheets/profile_style.css" />
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
 	<script>
 	function initialize() {
@@ -53,12 +53,12 @@
 
 	<header>
 		<div class="wrapper">
-			<a href="#"><img src="img/Raedam-logo.png" width="12%" height="12%" alt="Raedam logo" title="Raedam - ¡Encuentra el mejor lugar para estacionarte!" /></a>
+			<a href="#"><img src="/images/Raedam-logo.png" width="12%" height="12%" alt="Raedam logo" title="Raedam - ¡Encuentra el mejor lugar para estacionarte!" /></a>
 			
 			<span id="usernav">
 			<a href="#">Logout</a> 
 			
-			- <a href="#">Mi Perfil<span><img src="img/Raedam-icon.ico" width="10%" height="10%" /></span></a></span>
+			- <a href="#">Mi Perfil<span><img src="/images/Raedam-icon.ico" width="10%" height="10%" /></span></a></span>
 		</div>
 	</header>
 	
@@ -66,8 +66,8 @@
 		<ul id="n" class="clearfix">
 			
 			<li class="sel"><a href="#">Perfil</a></li>
-			<li><a href="#">Registra tu Espacio</a></li>
-			<li><a href="#">Búsqueda de Espacios</a></li>
+			<li><a href="/savePlace">Registra tu Espacio</a></li>
+			<li><a href="/search">Búsqueda de Espacios</a></li>
 		
 		</ul>
 	</nav>
@@ -76,15 +76,15 @@
 		<section id="left">
 			<div id="userStats" class="clearfix">
 				<div class="pic">
-					<a href="#"><img src="img/user-avatar.jpg" width="150" height="150" /></a>
+					<a href="#"><img src="/images/user2-avatar.jpg" width="150" height="150" /></a>
 				</div>
 				
 				<div class="data">
 					<h1>Alejandro Comi</h1>
 					<h3>México, D.F.</h3>
 					<div class="SocialMediaLinks">
-						<a href="http://twitter.com/AlejandroComi" rel="me" target="_blank"><img src="img/twitter.png" alt="@AlejandroComi" /></a>
-						<a href="http://facebook.com/alejandroComiPretelin" rel="me" target="_blank"><img src="img/facebook.png" width="7%" height="7%" /></a>
+						<a href="http://twitter.com/AlejandroComi" rel="me" target="_blank"><img src="/images/twitter.png" alt="@AlejandroComi" /></a>
+						<a href="http://facebook.com/alejandroComiPretelin" rel="me" target="_blank"><img src="/images/facebook.png" width="7%" height="7%" /></a>
 					</div>
 					<div class="sep"></div>
 					<ul class="numbers clearfix">
@@ -94,8 +94,12 @@
 					</ul>
 				</div>
 			</div>
-			<h1>Sobre Mí:</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h1>Usuario desde:</h1>
+			<p>20/03/15</p>
+			<h1>Zona más concurrida:</h1>
+			<p>COPILCO</p>
+			<h1>Espacios que rentas: (visualizar en mapa)</h1>
+			<p>3 UBICADOS CERCA DE TLALNEPANTLA</p>
 			
 			<article><b>Espacios Rentados:</b></article>
 
@@ -112,9 +116,9 @@
 					<p>¡Estaciónate y Obtén más beneficios!</p>
 					
 					<div class="medallas">
-						<a href="#"><img src="img/tuola.png" width="20%" /></a>
-						<a href="#"><img src="img/carrot.png" /></a>
-						<a href="#"><img src="img/trueque.png" /></a>
+						<a href="#"><img src="/images/tuola.png" width="20%" /></a>
+						<a href="#"><img src="/images/carrot.png" /></a>
+						<a href="#"><img src="/images/trueque.png" /></a>
 					</div>
 					
 					<span><a href="medallas.html">Ver Todos…</a></span>
@@ -128,27 +132,27 @@
 					
 					<div class="friendslist clearfix">
 						<div class="friend">
-							<a href="#"><img src="img/friend_avatar_default.jpg" width="30" height="30" alt="Rafa" /></a><span class="friendly"><a href="#">Rafa</a></span>
+							<a href="#"><img src="/images/friend_avatar_default.jpg" width="30" height="30" alt="Rafa" /></a><span class="friendly"><a href="#">Rafa</a></span>
 						</div>
 						
 						<div class="friend">
-							<a href="#"><img src="img/friend_avatar_default.jpg" width="30" height="30" alt="Edwin" /></a><span class="friendly"><a href="#">Edwin</a></span>
+							<a href="#"><img src="/images/friend_avatar_default.jpg" width="30" height="30" alt="Edwin" /></a><span class="friendly"><a href="#">Edwin</a></span>
 						</div>
 						
 						<div class="friend">
-							<a href="#"><img src="img/friend_avatar_default.jpg" width="30" height="30" alt="David" /></a><span class="friendly"><a href="#">David</a></span>
+							<a href="#"><img src="/images/friend_avatar_default.jpg" width="30" height="30" alt="David" /></a><span class="friendly"><a href="#">David</a></span>
 						</div>
 						
 						<div class="friend">
-							<a href="#"><img src="img/friend_avatar_default.jpg" width="30" height="30" alt="Vicente" /></a><span class="friendly"><a href="#">Vicente</a></span>
+							<a href="#"><img src="/images/friend_avatar_default.jpg" width="30" height="30" alt="Vicente" /></a><span class="friendly"><a href="#">Vicente</a></span>
 						</div>
 						
 						<div class="friend">
-							<a href="#"><img src="img/friend_avatar_default.jpg" width="30" height="30" alt="Toño" /></a><span class="friendly"><a href="#">Toño</a></span>
+							<a href="#"><img src="/images/friend_avatar_default.jpg" width="30" height="30" alt="Toño" /></a><span class="friendly"><a href="#">Toño</a></span>
 						</div>
 						
 						<div class="friend">
-							<a href="#"><img src="img/friend_avatar_default.jpg" width="30" height="30" alt="Juan" /></a><span class="friendly"><a href="#">Petter</a></span>
+							<a href="#"><img src="/images/friend_avatar_default.jpg" width="30" height="30" alt="Juan" /></a><span class="friendly"><a href="#">Petter</a></span>
 						</div>
 					</div>
 					
