--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -84,7 +84,7 @@
     <ul class="right">
       <li class="active"><a href="#">Registro de espacios</a></li>
       <li class="has-dropdown">
-        <a href="/">Menu</a>
+        <a href="#">Menu</a>
         <ul class="dropdown">
           <li><a href="/search">Busqueda de espacios</a></li>
           <li class="active"><a href="#">Registro de espacios</a></li>
