--- a/public/stylesheets/profile_style.css
+++ b/public/stylesheets/profile_style.css
@@ -17,7 +17,7 @@ body {
 	font-size: 62.5%; 
 	font-family: Helvetica, Arial, sans-serif; 
 	line-height: 10%; 
-	background-image: url(../img/eight_horns.png);
+	background-image: url(/images/eight_horns.png);
 	float: center;
 }
 
@@ -194,15 +194,15 @@ ul#n li a {
 }
 
 ul#n li.sel { 
-	background: #b4e127; 
-	border: 3px solid #c1ff00; 
+	background: #00BCD4; 
+	border: 3px solid #00BCD4; 
 	border-top: 0px; 
 	border-bottom: 0px; 
 }
 
 ul#n li.sel a { 
-	color: #fff; 
-	text-shadow: 0px 1px 2px #88b618; 
+	color: white; 
+	 
 }
 
 /* @group left */
