--- a/views/profiles.ejs
+++ b/views/profiles.ejs
@@ -56,7 +56,7 @@
 			<a href="#"><img src="/images/Raedam-logo.png" width="12%" height="12%" alt="Raedam logo" title="Raedam - ¡Encuentra el mejor lugar para estacionarte!" /></a>
 			
 			<span id="usernav">
-			<a href="#">Logout</a> 
+			<a href="/logout">Logout</a> 
 			
 			- <a href="#">Mi Perfil<span><img src="/images/Raedam-icon.ico" width="10%" height="10%" /></span></a></span>
 		</div>
