--- a/views/profiles.ejs
+++ b/views/profiles.ejs
@@ -6,44 +6,22 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/profile_style.css" />
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
 	<script>
+	var  myLatlng = new  google.maps.LatLng(19.430170975081705, -99.1980612026245);
 	function initialize() {
-		var latitud = ((Math.random() * 0.01) + 19);
-		var longitud = ((Math.random() * 0.01) + (-99));
-		var latitud2 = ((Math.random() * 0.01) + 19);
-		var longitud2 = ((Math.random() * 0.01) + (-99));
-		var latitud3 = ((Math.random() * 0.01) + 19);
-		var longitud3 = ((Math.random() * 0.01) + (-99));
-
-	  	var myLatlng = new google.maps.LatLng(latitud, longitud);
-	   	var myLatlng2 = new google.maps.LatLng(latitud2, longitud2);
-	    var myLatlng3 = new google.maps.LatLng(latitud3, longitud3);
+		
 	  	var mapOptions = {
 	    	zoom: 15,
-	    	center: myLatlng
+	    	center: myLatlng,
 	  	}
 	  	var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-	  	var marker = new google.maps.Marker({
-	    	position: myLatlng,
-	    	map: map,
-	    	title: 'Hello World!',
-	    	animation: google.maps.Animation.DROP,
-	    	draggable: true
-	  	});
-	   	var marker2 = new google.maps.Marker({
-	    	position: myLatlng2,
-	    	map: map,
-	    	title: 'H',
-	    	animation: google.maps.Animation.DROP,
-	    	draggable: true
-	  	});
-	    var marker3 = new google.maps.Marker({
-	    	position: myLatlng3,
-	    	map: map,
-	    	title: 'H',
-	    	animation: google.maps.Animation.DROP,
-	    	draggable: true
-	  	});
+var markerRent1 = new google.maps.Marker({
+					icon:'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
+			        position: myLatlng ,
+			        map: map,
+			        draggable: true,
+			        animation: google.maps.Animation.DROP
+				});
 	}
 	google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
@@ -58,7 +36,7 @@
 			<span id="usernav">
 			<a href="/logout">Logout</a> 
 			
-			- <a href="#">Mi Perfil<span><img src="/images/Raedam-icon.ico" width="10%" height="10%" /></span></a></span>
+			- <a href="#"><span><img src="/images/Raedam-icon.ico" width="10%" height="10%" /></span></a></span>
 		</div>
 	</header>
 	
@@ -99,7 +77,7 @@
 			<h1>Zona más concurrida:</h1>
 			<p>COPILCO</p>
 			<h1>Espacios que rentas: (visualizar en mapa)</h1>
-			<p>3 UBICADOS CERCA DE TLALNEPANTLA</p>
+			<p>1 UBICADO CERCA DE POLANCO</p>
 			
 			<article><b>Espacios Rentados:</b></article>
 
