--- a/views/paymentready.ejs
+++ b/views/paymentready.ejs
@@ -10,7 +10,7 @@
 	<script src="stylesheets/foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
-	<h1>Your payment is ready</h1>
+	<h1>Puedes ir a tu lugar a estacionarte :D</h1>
 	<a href="/profile">
 		Vuelve a tu perfil
 	</a>
